// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi Line Tooltip - No Header should render multiple line tooltip correctly 1`] = `
<WithStyles(HvTooltip)
  title={
    <div>
      <WithStyles(ForwardRef)
        variant="labelText"
      >
        
      </WithStyles(ForwardRef)>
      <div>
        <WithStyles(ForwardRef)
          variant="labelText"
        >
          Status
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)
          variant="sText"
        >
          Open
        </WithStyles(ForwardRef)>
      </div>
      <div>
        <WithStyles(ForwardRef)
          variant="labelText"
        >
          Date
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)
          variant="sText"
        >
          12/08/2018
        </WithStyles(ForwardRef)>
      </div>
      <div>
        <WithStyles(ForwardRef)
          variant="labelText"
        >
          Assignee
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)
          variant="sText"
        >
          Management
        </WithStyles(ForwardRef)>
      </div>
      <div>
        <WithStyles(ForwardRef)
          variant="labelText"
        >
          Approval
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)
          variant="sText"
        >
          Not yet requested
        </WithStyles(ForwardRef)>
      </div>
    </div>
  }
  useSingle={false}
>
  <HvTooltip
    classes={
      Object {
        "color": "HvTooltip-color",
        "popper": "HvTooltip-popper",
        "root": "HvTooltip-root",
        "separator": "HvTooltip-separator",
        "separatorColor": "HvTooltip-separatorColor",
        "title": "HvTooltip-title",
        "tooltip": "HvTooltip-tooltip",
        "tooltipMulti": "HvTooltip-tooltipMulti",
        "valueWrapper": "HvTooltip-valueWrapper",
        "values": "HvTooltip-values",
        "valuesContainer": "HvTooltip-valuesContainer",
      }
    }
    title={
      <div>
        <WithStyles(ForwardRef)
          variant="labelText"
        >
          
        </WithStyles(ForwardRef)>
        <div>
          <WithStyles(ForwardRef)
            variant="labelText"
          >
            Status
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)
            variant="sText"
          >
            Open
          </WithStyles(ForwardRef)>
        </div>
        <div>
          <WithStyles(ForwardRef)
            variant="labelText"
          >
            Date
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)
            variant="sText"
          >
            12/08/2018
          </WithStyles(ForwardRef)>
        </div>
        <div>
          <WithStyles(ForwardRef)
            variant="labelText"
          >
            Assignee
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)
            variant="sText"
          >
            Management
          </WithStyles(ForwardRef)>
        </div>
        <div>
          <WithStyles(ForwardRef)
            variant="labelText"
          >
            Approval
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)
            variant="sText"
          >
            Not yet requested
          </WithStyles(ForwardRef)>
        </div>
      </div>
    }
    useSingle={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      TransitionComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "children": [Function],
            "in": [Function],
            "onEnter": [Function],
            "onExit": [Function],
            "style": [Function],
            "timeout": [Function],
          },
          "render": [Function],
        }
      }
      TransitionProps={
        Object {
          "timeout": 400,
        }
      }
      classes={
        Object {
          "popper": "HvTooltip-popper",
          "tooltip": "HvTooltip-tooltipMulti",
        }
      }
      enterDelay={300}
      placement="top"
      title={
        <div>
          <WithStyles(ForwardRef)
            variant="labelText"
          >
            
          </WithStyles(ForwardRef)>
          <div>
            <WithStyles(ForwardRef)
              variant="labelText"
            >
              Status
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)
              variant="sText"
            >
              Open
            </WithStyles(ForwardRef)>
          </div>
          <div>
            <WithStyles(ForwardRef)
              variant="labelText"
            >
              Date
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)
              variant="sText"
            >
              12/08/2018
            </WithStyles(ForwardRef)>
          </div>
          <div>
            <WithStyles(ForwardRef)
              variant="labelText"
            >
              Assignee
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)
              variant="sText"
            >
              Management
            </WithStyles(ForwardRef)>
          </div>
          <div>
            <WithStyles(ForwardRef)
              variant="labelText"
            >
              Approval
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)
              variant="sText"
            >
              Not yet requested
            </WithStyles(ForwardRef)>
          </div>
        </div>
      }
    >
      <ForwardRef(Tooltip)
        TransitionComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "children": [Function],
              "in": [Function],
              "onEnter": [Function],
              "onExit": [Function],
              "style": [Function],
              "timeout": [Function],
            },
            "render": [Function],
          }
        }
        TransitionProps={
          Object {
            "timeout": 400,
          }
        }
        classes={
          Object {
            "arrow": "MuiTooltip-arrow",
            "popper": "MuiTooltip-popper HvTooltip-popper",
            "popperArrow": "MuiTooltip-popperArrow",
            "popperInteractive": "MuiTooltip-popperInteractive",
            "tooltip": "MuiTooltip-tooltip HvTooltip-tooltipMulti",
            "tooltipArrow": "MuiTooltip-tooltipArrow",
            "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom",
            "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft",
            "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight",
            "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop",
            "touch": "MuiTooltip-touch",
          }
        }
        enterDelay={300}
        placement="top"
        title={
          <div>
            <WithStyles(ForwardRef)
              variant="labelText"
            >
              
            </WithStyles(ForwardRef)>
            <div>
              <WithStyles(ForwardRef)
                variant="labelText"
              >
                Status
              </WithStyles(ForwardRef)>
              <div />
              <WithStyles(ForwardRef)
                variant="sText"
              >
                Open
              </WithStyles(ForwardRef)>
            </div>
            <div>
              <WithStyles(ForwardRef)
                variant="labelText"
              >
                Date
              </WithStyles(ForwardRef)>
              <div />
              <WithStyles(ForwardRef)
                variant="sText"
              >
                12/08/2018
              </WithStyles(ForwardRef)>
            </div>
            <div>
              <WithStyles(ForwardRef)
                variant="labelText"
              >
                Assignee
              </WithStyles(ForwardRef)>
              <div />
              <WithStyles(ForwardRef)
                variant="sText"
              >
                Management
              </WithStyles(ForwardRef)>
            </div>
            <div>
              <WithStyles(ForwardRef)
                variant="labelText"
              >
                Approval
              </WithStyles(ForwardRef)>
              <div />
              <WithStyles(ForwardRef)
                variant="sText"
              >
                Not yet requested
              </WithStyles(ForwardRef)>
            </div>
          </div>
        }
      >
        <button
          aria-describedby={null}
          className=""
          id="testChild"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          title={null}
          type="submit"
        >
          Hello World
        </button>
        <ForwardRef(Popper)
          anchorEl={
            <button
              class=""
              id="testChild"
              type="submit"
            >
              Hello World
            </button>
          }
          className="MuiTooltip-popper HvTooltip-popper"
          id={null}
          open={false}
          placement="top"
          popperOptions={
            Object {
              "modifiers": Object {
                "arrow": Object {
                  "element": null,
                  "enabled": false,
                },
              },
            }
          }
          transition={true}
        />
      </ForwardRef(Tooltip)>
    </WithStyles(ForwardRef(Tooltip))>
  </HvTooltip>
</WithStyles(HvTooltip)>
`;

exports[`Multi Line Tooltip - With Header should render multiple line tooltip with header correctly 1`] = `
<WithStyles(HvTooltip)
  title={
    <div>
      <WithStyles(ForwardRef)
        variant="labelText"
      >
        January
      </WithStyles(ForwardRef)>
      <div>
        <WithStyles(ForwardRef)
          variant="labelText"
        >
          Sales
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)
          variant="sText"
        >
          52,000 units
        </WithStyles(ForwardRef)>
      </div>
      <div>
        <WithStyles(ForwardRef)
          variant="labelText"
        >
          Profit
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)
          variant="sText"
        >
          50%
        </WithStyles(ForwardRef)>
      </div>
    </div>
  }
  useSingle={false}
>
  <HvTooltip
    classes={
      Object {
        "color": "HvTooltip-color",
        "popper": "HvTooltip-popper",
        "root": "HvTooltip-root",
        "separator": "HvTooltip-separator",
        "separatorColor": "HvTooltip-separatorColor",
        "title": "HvTooltip-title",
        "tooltip": "HvTooltip-tooltip",
        "tooltipMulti": "HvTooltip-tooltipMulti",
        "valueWrapper": "HvTooltip-valueWrapper",
        "values": "HvTooltip-values",
        "valuesContainer": "HvTooltip-valuesContainer",
      }
    }
    title={
      <div>
        <WithStyles(ForwardRef)
          variant="labelText"
        >
          January
        </WithStyles(ForwardRef)>
        <div>
          <WithStyles(ForwardRef)
            variant="labelText"
          >
            Sales
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)
            variant="sText"
          >
            52,000 units
          </WithStyles(ForwardRef)>
        </div>
        <div>
          <WithStyles(ForwardRef)
            variant="labelText"
          >
            Profit
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)
            variant="sText"
          >
            50%
          </WithStyles(ForwardRef)>
        </div>
      </div>
    }
    useSingle={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      TransitionComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "children": [Function],
            "in": [Function],
            "onEnter": [Function],
            "onExit": [Function],
            "style": [Function],
            "timeout": [Function],
          },
          "render": [Function],
        }
      }
      TransitionProps={
        Object {
          "timeout": 400,
        }
      }
      classes={
        Object {
          "popper": "HvTooltip-popper",
          "tooltip": "HvTooltip-tooltipMulti",
        }
      }
      enterDelay={300}
      placement="top"
      title={
        <div>
          <WithStyles(ForwardRef)
            variant="labelText"
          >
            January
          </WithStyles(ForwardRef)>
          <div>
            <WithStyles(ForwardRef)
              variant="labelText"
            >
              Sales
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)
              variant="sText"
            >
              52,000 units
            </WithStyles(ForwardRef)>
          </div>
          <div>
            <WithStyles(ForwardRef)
              variant="labelText"
            >
              Profit
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)
              variant="sText"
            >
              50%
            </WithStyles(ForwardRef)>
          </div>
        </div>
      }
    >
      <ForwardRef(Tooltip)
        TransitionComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "children": [Function],
              "in": [Function],
              "onEnter": [Function],
              "onExit": [Function],
              "style": [Function],
              "timeout": [Function],
            },
            "render": [Function],
          }
        }
        TransitionProps={
          Object {
            "timeout": 400,
          }
        }
        classes={
          Object {
            "arrow": "MuiTooltip-arrow",
            "popper": "MuiTooltip-popper HvTooltip-popper",
            "popperArrow": "MuiTooltip-popperArrow",
            "popperInteractive": "MuiTooltip-popperInteractive",
            "tooltip": "MuiTooltip-tooltip HvTooltip-tooltipMulti",
            "tooltipArrow": "MuiTooltip-tooltipArrow",
            "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom",
            "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft",
            "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight",
            "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop",
            "touch": "MuiTooltip-touch",
          }
        }
        enterDelay={300}
        placement="top"
        title={
          <div>
            <WithStyles(ForwardRef)
              variant="labelText"
            >
              January
            </WithStyles(ForwardRef)>
            <div>
              <WithStyles(ForwardRef)
                variant="labelText"
              >
                Sales
              </WithStyles(ForwardRef)>
              <div />
              <WithStyles(ForwardRef)
                variant="sText"
              >
                52,000 units
              </WithStyles(ForwardRef)>
            </div>
            <div>
              <WithStyles(ForwardRef)
                variant="labelText"
              >
                Profit
              </WithStyles(ForwardRef)>
              <div />
              <WithStyles(ForwardRef)
                variant="sText"
              >
                50%
              </WithStyles(ForwardRef)>
            </div>
          </div>
        }
      >
        <button
          aria-describedby={null}
          className=""
          id="testChild"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          title={null}
          type="submit"
        >
          Hello World
        </button>
        <ForwardRef(Popper)
          anchorEl={
            <button
              class=""
              id="testChild"
              type="submit"
            >
              Hello World
            </button>
          }
          className="MuiTooltip-popper HvTooltip-popper"
          id={null}
          open={false}
          placement="top"
          popperOptions={
            Object {
              "modifiers": Object {
                "arrow": Object {
                  "element": null,
                  "enabled": false,
                },
              },
            }
          }
          transition={true}
        />
      </ForwardRef(Tooltip)>
    </WithStyles(ForwardRef(Tooltip))>
  </HvTooltip>
</WithStyles(HvTooltip)>
`;

exports[`Single Line Tooltip should render single line tooltip correctly 1`] = `
<WithStyles(HvTooltip)
  title={
    <WithStyles(ForwardRef)
      variant="labelText"
    >
      Grid View
    </WithStyles(ForwardRef)>
  }
>
  <HvTooltip
    classes={
      Object {
        "color": "HvTooltip-color",
        "popper": "HvTooltip-popper",
        "root": "HvTooltip-root",
        "separator": "HvTooltip-separator",
        "separatorColor": "HvTooltip-separatorColor",
        "title": "HvTooltip-title",
        "tooltip": "HvTooltip-tooltip",
        "tooltipMulti": "HvTooltip-tooltipMulti",
        "valueWrapper": "HvTooltip-valueWrapper",
        "values": "HvTooltip-values",
        "valuesContainer": "HvTooltip-valuesContainer",
      }
    }
    title={
      <WithStyles(ForwardRef)
        variant="labelText"
      >
        Grid View
      </WithStyles(ForwardRef)>
    }
  >
    <WithStyles(ForwardRef(Tooltip))
      TransitionComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "children": [Function],
            "in": [Function],
            "onEnter": [Function],
            "onExit": [Function],
            "style": [Function],
            "timeout": [Function],
          },
          "render": [Function],
        }
      }
      TransitionProps={
        Object {
          "timeout": 400,
        }
      }
      classes={
        Object {
          "popper": "HvTooltip-popper",
          "tooltip": "HvTooltip-tooltip",
        }
      }
      enterDelay={300}
      placement="top"
      title={
        <WithStyles(ForwardRef)
          variant="labelText"
        >
          Grid View
        </WithStyles(ForwardRef)>
      }
    >
      <ForwardRef(Tooltip)
        TransitionComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "children": [Function],
              "in": [Function],
              "onEnter": [Function],
              "onExit": [Function],
              "style": [Function],
              "timeout": [Function],
            },
            "render": [Function],
          }
        }
        TransitionProps={
          Object {
            "timeout": 400,
          }
        }
        classes={
          Object {
            "arrow": "MuiTooltip-arrow",
            "popper": "MuiTooltip-popper HvTooltip-popper",
            "popperArrow": "MuiTooltip-popperArrow",
            "popperInteractive": "MuiTooltip-popperInteractive",
            "tooltip": "MuiTooltip-tooltip HvTooltip-tooltip",
            "tooltipArrow": "MuiTooltip-tooltipArrow",
            "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom",
            "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft",
            "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight",
            "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop",
            "touch": "MuiTooltip-touch",
          }
        }
        enterDelay={300}
        placement="top"
        title={
          <WithStyles(ForwardRef)
            variant="labelText"
          >
            Grid View
          </WithStyles(ForwardRef)>
        }
      >
        <button
          aria-describedby={null}
          className=""
          id="testChild"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          title={null}
          type="submit"
        >
          Hello World
        </button>
        <ForwardRef(Popper)
          anchorEl={
            <button
              class=""
              id="testChild"
              type="submit"
            >
              Hello World
            </button>
          }
          className="MuiTooltip-popper HvTooltip-popper"
          id={null}
          open={false}
          placement="top"
          popperOptions={
            Object {
              "modifiers": Object {
                "arrow": Object {
                  "element": null,
                  "enabled": false,
                },
              },
            }
          }
          transition={true}
        />
      </ForwardRef(Tooltip)>
    </WithStyles(ForwardRef(Tooltip))>
  </HvTooltip>
</WithStyles(HvTooltip)>
`;
